--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -1,10 +1,20 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+@article {MR2656670,
+    AUTHOR = {Nguyen Van Th\'{e}, Lionel and Pestov, Vladimir G.},
+     TITLE = {Fixed point-free isometric actions of topological groups on
+              {B}anach spaces},
+   JOURNAL = {Bull. Belg. Math. Soc. Simon Stevin},
+  FJOURNAL = {Bulletin of the Belgian Mathematical Society. Simon Stevin},
+    VOLUME = {17},
+      YEAR = {2010},
+    NUMBER = {1},
+     PAGES = {29--51},
+      ISSN = {1370-1444},
+   MRCLASS = {22A25},
+  MRNUMBER = {2656670},
+MRREVIEWER = {Alain Valette},
+       URL = {http://projecteuclid.org/euclid.bbms/1267798497},
+}
 
-%% Created for Grégoire Schneeberger at 2021-01-15 16:55:18 +0100 
-
-
-%% Saved with string encoding Unicode (UTF-8)
 @article {MR2978328,
     AUTHOR = {Bourdon, Marc},
      TITLE = {Un th\'{e}or\`eme de point fixe sur les espaces {$L^p$}},
